cdk.out/ApadanaNetworkStack.template.json
{
  "Resources": {
    "ApadanaVPC012ED713": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/Resource"
      }
    },
    "ApadanaVPCPrivateSubnet1SubnetE490B7CE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet1/Subnet"
      }
    },
    "ApadanaVPCPrivateSubnet1RouteTable572970B6": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet1/RouteTable"
      }
    },
    "ApadanaVPCPrivateSubnet1RouteTableAssociationDAF35D37": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ApadanaVPCPrivateSubnet1RouteTable572970B6"
        },
        "SubnetId": {
          "Ref": "ApadanaVPCPrivateSubnet1SubnetE490B7CE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "ApadanaVPCPrivateSubnet1DefaultRoute6065FFBE": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "ApadanaVPCPublicSubnet1NATGateway4F6D7896"
        },
        "RouteTableId": {
          "Ref": "ApadanaVPCPrivateSubnet1RouteTable572970B6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet1/DefaultRoute"
      }
    },
    "ApadanaVPCPrivateSubnet2SubnetBB9252B1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet2/Subnet"
      }
    },
    "ApadanaVPCPrivateSubnet2RouteTable158EFCCF": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet2/RouteTable"
      }
    },
    "ApadanaVPCPrivateSubnet2RouteTableAssociation146A31E2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ApadanaVPCPrivateSubnet2RouteTable158EFCCF"
        },
        "SubnetId": {
          "Ref": "ApadanaVPCPrivateSubnet2SubnetBB9252B1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "ApadanaVPCPrivateSubnet2DefaultRouteA07FFFA1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "ApadanaVPCPublicSubnet1NATGateway4F6D7896"
        },
        "RouteTableId": {
          "Ref": "ApadanaVPCPrivateSubnet2RouteTable158EFCCF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PrivateSubnet2/DefaultRoute"
      }
    },
    "ApadanaVPCPublicSubnet1Subnet75839C54": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.2.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1/Subnet"
      }
    },
    "ApadanaVPCPublicSubnet1RouteTableAB00603C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1/RouteTable"
      }
    },
    "ApadanaVPCPublicSubnet1RouteTableAssociation00F5A69C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ApadanaVPCPublicSubnet1RouteTableAB00603C"
        },
        "SubnetId": {
          "Ref": "ApadanaVPCPublicSubnet1Subnet75839C54"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1/RouteTableAssociation"
      }
    },
    "ApadanaVPCPublicSubnet1DefaultRouteE1B58E63": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "ApadanaVPCIGW72113AA1"
        },
        "RouteTableId": {
          "Ref": "ApadanaVPCPublicSubnet1RouteTableAB00603C"
        }
      },
      "DependsOn": ["ApadanaVPCVPCGWED248202"],
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1/DefaultRoute"
      }
    },
    "ApadanaVPCPublicSubnet1EIP16A129A5": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1/EIP"
      }
    },
    "ApadanaVPCPublicSubnet1NATGateway4F6D7896": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": ["ApadanaVPCPublicSubnet1EIP16A129A5", "AllocationId"]
        },
        "SubnetId": {
          "Ref": "ApadanaVPCPublicSubnet1Subnet75839C54"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "ApadanaVPCPublicSubnet1DefaultRouteE1B58E63",
        "ApadanaVPCPublicSubnet1RouteTableAssociation00F5A69C"
      ],
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet1/NATGateway"
      }
    },
    "ApadanaVPCPublicSubnet2SubnetC31555A0": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.3.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet2/Subnet"
      }
    },
    "ApadanaVPCPublicSubnet2RouteTableC7D5A068": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet2/RouteTable"
      }
    },
    "ApadanaVPCPublicSubnet2RouteTableAssociation104FAE29": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ApadanaVPCPublicSubnet2RouteTableC7D5A068"
        },
        "SubnetId": {
          "Ref": "ApadanaVPCPublicSubnet2SubnetC31555A0"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet2/RouteTableAssociation"
      }
    },
    "ApadanaVPCPublicSubnet2DefaultRoute8E37EECF": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "ApadanaVPCIGW72113AA1"
        },
        "RouteTableId": {
          "Ref": "ApadanaVPCPublicSubnet2RouteTableC7D5A068"
        }
      },
      "DependsOn": ["ApadanaVPCVPCGWED248202"],
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/PublicSubnet2/DefaultRoute"
      }
    },
    "ApadanaVPCIGW72113AA1": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ApadanaNetworkStack/ApadanaVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/IGW"
      }
    },
    "ApadanaVPCVPCGWED248202": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "ApadanaVPCIGW72113AA1"
        },
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/ApadanaVPC/VPCGW"
      }
    },
    "MemoryDBSecurityGroup1731B106": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for Apadana MemoryDB cluster",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": ["ApadanaVPC012ED713", "CidrBlock"]
            },
            "Description": "Allow Redis access from within VPC",
            "FromPort": 6379,
            "IpProtocol": "tcp",
            "ToPort": 6379
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/MemoryDBSecurityGroup/Resource"
      }
    },
    "RDSSecurityGroup6BF2CF10": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for Apadana RDS instance",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": ["ApadanaVPC012ED713", "CidrBlock"]
            },
            "Description": "Allow PostgreSQL access from within VPC",
            "FromPort": 5432,
            "IpProtocol": "tcp",
            "ToPort": 5432
          }
        ],
        "VpcId": {
          "Ref": "ApadanaVPC012ED713"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/RDSSecurityGroup/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OQWvCQBCFf4v3zdakhfYqQcRLuyQl1zIZRxyNu2F3xiDify9RMZ7evI/H8BU2/3y3HzMYUoabQ9Zxay+1AB4MDOmPsLCXpkdTbn3jSuMin0Co1taTjHC6qqBCv9B2NPGJLVIKyCAc/HNsnLYd4/RiuXZjfIOsQGiA89jWXih6ekWNKx9tIQK4O5IXUxNqZDmvYtD+pvAKrqaiFDTize5Hpde79YNejQ8bsvv0dirmNv+y+WyfmLOoXvhItrrnP5bFzFUvAQAA"
      },
      "Metadata": {
        "aws:cdk:path": "ApadanaNetworkStack/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "VpcId": {
      "Description": "VPC ID",
      "Value": {
        "Ref": "ApadanaVPC012ED713"
      },
      "Export": {
        "Name": "ApadanaVpcId"
      }
    },
    "MemoryDBSecurityGroupId": {
      "Description": "MemoryDB Security Group ID",
      "Value": {
        "Fn::GetAtt": ["MemoryDBSecurityGroup1731B106", "GroupId"]
      },
      "Export": {
        "Name": "ApadanaMemoryDBSecurityGroupId"
      }
    },
    "RDSSecurityGroupId": {
      "Description": "RDS Security Group ID",
      "Value": {
        "Fn::GetAtt": ["RDSSecurityGroup6BF2CF10", "GroupId"]
      },
      "Export": {
        "Name": "ApadanaRDSSecurityGroupId"
      }
    },
    "ExportsOutputRefApadanaVPCPrivateSubnet1SubnetE490B7CE17239615": {
      "Value": {
        "Ref": "ApadanaVPCPrivateSubnet1SubnetE490B7CE"
      },
      "Export": {
        "Name": "ApadanaNetworkStack:ExportsOutputRefApadanaVPCPrivateSubnet1SubnetE490B7CE17239615"
      }
    },
    "ExportsOutputRefApadanaVPCPrivateSubnet2SubnetBB9252B15E0A334B": {
      "Value": {
        "Ref": "ApadanaVPCPrivateSubnet2SubnetBB9252B1"
      },
      "Export": {
        "Name": "ApadanaNetworkStack:ExportsOutputRefApadanaVPCPrivateSubnet2SubnetBB9252B15E0A334B"
      }
    },
    "ExportsOutputFnGetAttMemoryDBSecurityGroup1731B106GroupIdF77124E4": {
      "Value": {
        "Fn::GetAtt": ["MemoryDBSecurityGroup1731B106", "GroupId"]
      },
      "Export": {
        "Name": "ApadanaNetworkStack:ExportsOutputFnGetAttMemoryDBSecurityGroup1731B106GroupIdF77124E4"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  ["1", "2", "3", "4", "5"],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
